--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "codespaces-blank",
+  "name": "course-platform-lms",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -34,7 +34,7 @@
     "cmdk": "^1.0.0",
     "drizzle-orm": "^0.39.1",
     "lucide-react": "^0.474.0",
-    "next": "^15.2.0-canary.45",
+    "next": "^15.2.0-canary.47",
     "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
